--- a/apps/static-website/assets/styles/components/_header.scss
+++ b/apps/static-website/assets/styles/components/_header.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 2.5rem;
     &__label {
         color: var(--text-secondary);
         @extend %fem-text-body-200;
