--- a/apps/static-website/assets/styles/components/_dashboard.scss
+++ b/apps/static-website/assets/styles/components/_dashboard.scss
@@ -2,6 +2,9 @@
 
 .dashboard {
     &__content {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
         margin-bottom: 2.88rem;
     }
     &__item {
@@ -15,13 +18,23 @@
             border-top: 4px solid var(--fem-color-card-meta);
         }
         &--twitter {
-            border-top: 4px solid var(--fem-color-card-meta);
+            border-top: 4px solid var(--fem-color-card-twitter);
         } 
         &--instagram {
-            border-top: 4px solid var(--fem-color-card-meta);
+            position: relative;
+            &::before {
+                border-top-right-radius: 0.3125rem;
+                border-top-left-radius: 0.3125rem;
+                position: absolute;
+                top: 0;
+                content: '';
+                width: 100%;
+                height: 4px;
+                background: linear-gradient(45deg, var(--fem-color-card-instagram-one), var(--fem-color-card-instagram-two), var(--fem-color-card-instagram-three));
+            }
         } 
         &--youtube {
-            border-top: 4px solid var(--fem-color-card-meta);
+            border-top: 4px solid var(--fem-color-card-youtube);
         } 
     }
     &__link {
