--- a/apps/static-website/assets/styles/components/_header.scss
+++ b/apps/static-website/assets/styles/components/_header.scss
@@ -2,7 +2,7 @@
 
 .header {
   &__title {
-    @extend %fem-text-heading-sans-200;
+    @extend %fem-text-heading-sans-300;
     color: var(--text-primary);
   }
   &__subtitle {
@@ -28,6 +28,7 @@
 .switch {
   position: relative;
   display: inline-block;
+  font-size: 1px;
   width: 48px;
   height: 24px;
   $switch: &;
@@ -83,12 +84,15 @@
   .header {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
     margin-bottom: 2.88rem;
     &__title {
       grid-column: 1;
     }
     &__subtitle {
-      grid-column: 1;    }
+      grid-column: 1;
+      grid-row: 2; 
+    }
     > hr {
       display: none;
     }
@@ -97,6 +101,7 @@
     justify-self: end;
     align-self: center;
     grid-column: 2;
+    grid-row: 1;
     gap: 1rem;
     margin: 0;
   }
