--- a/apps/static-website/assets/styles/components/_dashboard.scss
+++ b/apps/static-website/assets/styles/components/_dashboard.scss
@@ -14,7 +14,7 @@
         display: grid;
         padding: 2rem 0 1.5rem;
         place-items: center;
-        &--meta {
+        &--facebook {
             border-top: 4px solid var(--fem-color-card-meta);
         }
         &--twitter {
@@ -52,6 +52,9 @@
         }
     }
     &__label {
+        margin-top: 0.5rem;
+        text-transform: uppercase;
+        color: var(--text-secondary);
         @extend %fem-text-body-300;
         @extend %fem-text-body-300-letter;
     }
@@ -62,6 +65,7 @@
         margin-bottom: 1.56rem;
         &-value {
             @extend %fem-text-heading-sans-500;
+            @extend %fem-text-heading-sans-500-letter;
         } 
     }
     &__indicator {
