--- a/apps/static-website/assets/styles/components/_overview.scss
+++ b/apps/static-website/assets/styles/components/_overview.scss
@@ -10,7 +10,8 @@
     &__content {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        row-gap: 1.5rem;
+        column-gap: 1.88rem;
         margin-bottom: 2.88rem;
     }
     &-card {
@@ -21,7 +22,6 @@
         padding: 1.69rem 1.94rem  1.19rem 1.5rem;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        gap: 1.44rem;
         &__title {
             color: var(--text-secondary);
             @extend %fem-text-heading-sans-100;
