--- a/apps/static-website/assets/styles/index.scss
+++ b/apps/static-website/assets/styles/index.scss
@@ -1,10 +1,10 @@
 @use 'reset';
 @use 'global';
-@use 'layout';
 @use 'utils';
 
 // Components
 @use './components/header';
+@use './components/footer';
 @use './components/dashboard';
 @use './components/overview';
 
